--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,29 @@
     <artifactId>core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <picocli.version>3.9.6</picocli.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
             <version>3.9.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli-shell-jline3</artifactId>
+            <version>3.9.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.23</version>
+        </dependency>
+
     </dependencies>
 
 </project>
